clean up CMakeLists.txt; started CanTransport plugin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,8 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(odrive_ros_control)
 
-## Compile as C++11, supported in ROS Kinetic and newer
-# add_compile_options(-std=c++11)
+add_compile_options(-std=c++14)
 
-## Find catkin macros and libraries
-## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
-## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   cmake_modules
   controller_manager
@@ -65,6 +61,9 @@ target_link_libraries(odrive_hardware_sim ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES
 add_library(odrive_transport_uart src/odrive_transport_uart.cpp)
 target_link_libraries(odrive_transport_uart ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
+add_library(odrive_transport_can src/odrive_transport_can.cpp)
+target_link_libraries(odrive_transport_can ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+
 add_executable(odrive_hardware_interface_node src/odrive_hardware_interface_node.cpp)
 target_link_libraries(odrive_hardware_interface_node odrive_hardware_interface)
 
@@ -79,23 +78,12 @@ set_target_properties(${PROJECT_NAME}_motion_streamer_interface
   PROPERTIES OUTPUT_NAME motion_streamer_interface PREFIX "")
 
 install(
-  TARGETS odrive_hardware_interface
+  TARGETS odrive_hardware_interface odrive_hardware_sim odrive_transport_uart odrive_transport_can
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
 )
-install(
-  TARGETS odrive_hardware_sim
-  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
-)
-install(
-  TARGETS odrive_transport_uart
-  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
-)
+
 
 install(
   DIRECTORY include/
@@ -103,11 +91,6 @@ install(
   FILES_MATCHING PATTERN "*.h"
 )
 
-install(FILES odrive_hardware_sim_plugin.xml
+install(FILES odrive_hardware_sim_plugin.xml odrive_transport_plugin.xml
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
-
-install(FILES odrive_transport_plugin.xml
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-)
-
