--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>gazebo_dev</build_depend>
   <build_depend>gazebo</build_depend>
+  <build_depend>message_generation</build_depend>
   <build_export_depend>cmake_modules</build_export_depend>
   <build_export_depend>controller_manager</build_export_depend>
   <build_export_depend>hardware_interface</build_export_depend>
@@ -31,6 +32,7 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>gazebo_ros</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
   <depend>control_toolbox</depend>
   <depend>transmission_interface</depend>
   <depend>pluginlib</depend>
