--- a/odrive_ros_control/package.xml
+++ b/odrive_ros_control/package.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>odrive_ros_control</name>
-  <version>0.0.0</version>
+  <version>0.0.1</version>
   <description>The odrive_ros_control package</description>
   <maintainer email="joejsy@gmail.com">naktamello</maintainer>
-  <license>TODO</license>
+  <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>cmake_modules</build_depend>
