clean up CMakeLists.txt; start refactoring serial

--- a/odrive_ros_control/CMakeLists.txt
+++ b/odrive_ros_control/CMakeLists.txt
@@ -22,6 +22,11 @@ find_package(catkin REQUIRED COMPONENTS
   async_comm
 )
 
+find_package(Boost REQUIRED COMPONENTS
+system
+thread
+)
+
 add_service_files(
    FILES
    ODriveRawCAN.srv
