--- a/async_comm/CMakeLists.txt
+++ b/async_comm/CMakeLists.txt
@@ -4,6 +4,10 @@ project(async_comm)
 add_compile_options(-std=c++14)
 
 find_package(catkin REQUIRED)
+find_package(Boost REQUIRED COMPONENTS
+system
+thread
+)
 
 catkin_package(
 INCLUDE_DIRS
@@ -11,7 +15,8 @@ INCLUDE_DIRS
 DEPENDS
   Boost
 LIBRARIES
-  can_device
+  ${PROJECT_NAME}_can
+  ${PROJECT_NAME}_serial
   )
 
 add_definitions(-DLINUXSOCKETS=1)
@@ -22,11 +27,14 @@ include_directories(
   ${Boost_INCLUDE_DIRS}
 )
 
-add_library(can_device src/async_can.cpp)
-target_link_libraries(can_device ${Boost_LIBRARIES})
+add_library(${PROJECT_NAME}_can src/async_can.cpp)
+target_link_libraries(${PROJECT_NAME}_can ${Boost_LIBRARIES})
+add_library(${PROJECT_NAME}_serial src/async_serial.cpp)
+target_link_libraries(${PROJECT_NAME}_serial ${Boost_LIBRARIES})
+
 
 install(
-  TARGETS can_device
+  TARGETS ${PROJECT_NAME}_can ${PROJECT_NAME}_serial
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
