--- a/odrive_ros_control/package.xml
+++ b/odrive_ros_control/package.xml
@@ -41,6 +41,7 @@
   <depend>gazebo_ros_control</depend>
   <depend>industrial_robot_client</depend>
   <depend>async_comm</depend>
+  <build_export_depend>boost</build_export_depend>
   <export>
     <gazebo_ros_control plugin="${prefix}/odrive_hardware_sim_plugin.xml"/>
     <odrive_ros_control plugin="${prefix}/odrive_transport_plugin.xml"/>
