added clear errors

--- a/odrive_ros_control/CMakeLists.txt
+++ b/odrive_ros_control/CMakeLists.txt
@@ -33,6 +33,7 @@ add_service_files(
    SetReadMode.srv
    SetWriteMode.srv
    SetRequestedState.srv
+   ClearErrors.srv
    GetAxisError.srv
    GetCurrentState.srv
    GetVbusVoltage.srv
